<resources>
    <string name="app_name">Free Kotlin Samples</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">created by devarthur4718@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appTitle">Free Kotlin Samples</string>
    <string name="Menu">Quick and simple Kotlin Samples</string>
    <string name="menuItemKotlin">Kotlin Samples</string>
    <string name="menuItemAndroidSamples">Android Samples</string>
    <string name="menuItemSuggestion">Send a Suggestion</string>
    <string name="menuGroupSocial">Social</string>
    <string name="menuItemShare">Share</string>
    <string name="menuitemRate">Rate this App.</string>

    <!--Menu itens -->
    <string name="menuItemOver">Overview</string>
    <string name="menuSetup">Enviroment Setup</string>
    <string name="menuArchitecture">Architecture</string>
    <string name="menuBasicTypes">Basic Types</string>
    <string name="menuBasicFlow">Control Flow</string>
    <string name="menuClass">Class and Object</string>
    <string name="menuConstructor">Constructors</string>
    <string name="menuInheritance">Inheritance</string>
    <string name="menuInterface">Interface</string>
    <string name="menuVisibilityControl">Visibility Control</string>
    <string name="menuExtension">Extension</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <string name="contentPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas non massa
        condimentum, mattis odio a, facilisis libero. Vestibulum malesuada vel neque eget ornare. Donec at massa mauris.
        Proin in arcu non orci ultricies ullamcorper et a nisi. Curabitur nec vestibulum leo.
    </string>

</resources>
