<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_kotlin"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/menuItemKotlin"/>
        <item
                android:id="@+id/nav_item_android_samples"
                android:icon="@drawable/ic_android_black_24dp"
                android:title="@string/menuItemAndroidSamples"/>

        <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menuItemSuggestion"/>
    </group>

    <item android:title="@string/menuGroupSocial">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menuItemShare"/>

            <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menuitemRate"/>
        </menu>
    </item>

</menu>
